fixed body spacing

--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,11 @@ html {
 }
 
 body {
- margin-top: 0px;
- margin-right: 0px;
- margin-bottom: 0px;
- margin-left: 0px
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+
 }
 
 .toaster {
